Add links to status page
Added on home page, help page and FAQ.

--- a/content/en/overview/_index.html
+++ b/content/en/overview/_index.html
@@ -121,6 +121,7 @@ hide_readingtime: true
           <div class="card-text">
             <ul>
               <li><a href="{{< ref "getting-started/help-and-support#pro-support" >}}">Pro support on Slack</a></li>
+              <li><a href="https://status.localstack.cloud">LocalStack Status Updates</a></li>
               <li><a href="{{< ref "getting-started/help-and-support#community-support" >}}">Community support on Slack</a></li>
               <li><a href="{{< ref "getting-started/help-and-support#create-a-discussion" >}}">Discussion forum on Discourse</a></li>
               <li><a href="{{< ref "getting-started/help-and-support#report-an-issue" >}}">Issue reports on GitHub</a></li>
