add blog banner

--- a/content/en/overview/_index.html
+++ b/content/en/overview/_index.html
@@ -15,15 +15,15 @@ hide_readingtime: true
 
 <div class="doc-overview-grid container section-index">
 
-  <!-- <div class="pageinfo pageinfo-primary">
-    <p class="banner-title"><b>LocalStack v3!</b></p>
+  <div class="pageinfo pageinfo-primary">
+    <p class="banner-title"><b>LocalStack 4.0!</b></p>
     <p>
-      We are excited to announce that we released LocalStack 3.0!
+      We are excited to announce that we released LocalStack 4.0!
       This release introduces a lot of great new features, and also cleans up some legacy code and configurations.
-      You can find all information about the release and the new features in our <a href="https://localstack.cloud/blog/2023-11-16-announcing-localstack-30-general-availability/" target="_blank">blog.</a>
-      You can migrate to LocalStack 3.0 by following our <a href="https://discuss.localstack.cloud/t/upcoming-changes-for-localstack-v3/576/3" target="_blank">migration guide</a>.
+      You can find all information about the release and the new features in our <a href="https://blog.localstack.cloud/announcing-localstack-40-general-availability/" target="_blank">blog.</a>
+      You can migrate to LocalStack 4.0 by following our <a href="https://blog.localstack.cloud/important-changes-in-localstack-4-0/" target="_blank">migration guide</a>.
     </p>
-  </div> -->
+  </div>
 
   <div class="row mb-3 justify-content-center">
     <div class="col-auto mb-2">
