--- a/content/en/overview/_index.html
+++ b/content/en/overview/_index.html
@@ -63,7 +63,7 @@ hide_readingtime: true
     </div>
 
     <div class="entry col-sm-12 col-md-6 col-lg-4">
-      <a class="card card-local-aws-services h-100" href="{{< ref "aws" >}}">
+      <a class="card card-local-aws-services h-100" href="{{< ref "references/coverage" >}}">
         <div class="card-body">
           <h5 class="card-title">Local AWS Services</h5>
           <p class="card-text">Browse through the AWS Services that LocalStack emulates.</p>
@@ -104,7 +104,7 @@ hide_readingtime: true
               <li><a href="{{< ref "getting-started/auth-token" >}}">How do I get started with a LocalStack auth token?</a></li>
               <li><a href="{{< ref "user-guide/state-management/cloud-pods" >}}">What are Cloud Pods and how do I use them?</a></li>
               <li><a href="{{< ref "user-guide/lambda-tools" >}}">How LocalStack improves your Lambda developer experience</a></li>
-              <li><a href="{{< ref "feature-coverage" >}}">Which AWS services does LocalStack support?</a></li>
+              <li><a href="{{< ref "references/coverage" >}}">Which AWS services does LocalStack support?</a></li>
               <li><a href="{{< ref "user-guide/integrations/serverless-framework" >}}">How do I use the Serverless Framework with LocalStack?</a></li>
             </ul>
           </div>
