--- a/content/en/user-guide/aws/_index.html
+++ b/content/en/user-guide/aws/_index.html
@@ -4,7 +4,7 @@ title: Local AWS Services
 layout: redirect
 sitemap_exclude: true
 weight: 1
-redirect: references/coverage
+redirect: user-guide/aws/feature-coverage
 cascade:
   type: docs
   aliases:
