--- a/user-guide/aws/index.html
+++ b/user-guide/aws/index.html
@@ -1,2 +1,2 @@
-<!doctype html><html lang=en><head><meta charset=utf-8><meta name=viewport content="width=device-width,initial-scale=1,shrink-to-fit=no"><title>/references/coverage</title>
-<link rel=canonical href=/references/coverage><meta name=robots content="noindex"><meta http-equiv=refresh content="0; url=/references/coverage"></head></html>
+<!doctype html><html lang=en><head><meta charset=utf-8><meta name=viewport content="width=device-width,initial-scale=1,shrink-to-fit=no"><title>/user-guide/aws/feature-coverage</title>
+<link rel=canonical href=/user-guide/aws/feature-coverage><meta name=robots content="noindex"><meta http-equiv=refresh content="0; url=/user-guide/aws/feature-coverage"></head></html>
