--- a/content/en/overview/_index.html
+++ b/content/en/overview/_index.html
@@ -15,7 +15,7 @@ hide_readingtime: true
 
 <div class="doc-overview-grid container section-index">
 
-  <div class="pageinfo pageinfo-primary">
+  <!-- <div class="pageinfo pageinfo-primary">
     <p class="banner-title"><b>LocalStack 4.0!</b></p>
     <p>
       We are excited to announce that we released LocalStack 4.0!
@@ -23,7 +23,7 @@ hide_readingtime: true
       You can find all information about the release and the new features in our <a href="https://blog.localstack.cloud/announcing-localstack-40-general-availability/" target="_blank">blog.</a>
       You can migrate to LocalStack 4.0 by following our <a href="https://blog.localstack.cloud/important-changes-in-localstack-4-0/" target="_blank">migration guide</a>.
     </p>
-  </div>
+  </div> -->
 
   <div class="row mb-3 justify-content-center">
     <div class="col-auto mb-2">
