deploy: f643c5ab8da19322f4f09c8c5bfd6698a8f0039d

--- a/references/init-hooks/index.html
+++ b/references/init-hooks/index.html
@@ -387,7 +387,7 @@ Boot scripts (scripts placed in <code>boot.d</code>) are currently always in the
 </span></span><span style=display:flex><span>    <span style=color:#000;font-weight:700>{</span>
 </span></span><span style=display:flex><span>      <span style=color:#204a87;font-weight:700>&#34;stage&#34;</span><span style=color:#000;font-weight:700>:</span> <span style=color:#4e9a06>&#34;READY&#34;</span><span style=color:#000;font-weight:700>,</span>
 </span></span><span style=display:flex><span>      <span style=color:#204a87;font-weight:700>&#34;name&#34;</span><span style=color:#000;font-weight:700>:</span> <span style=color:#4e9a06>&#34;pre_seed.py&#34;</span><span style=color:#000;font-weight:700>,</span>
-</span></span><span style=display:flex><span>      <span style=color:#a40000>&#34;state</span><span style=color:#204a87;font-weight:700>&#34;: &#34;</span><span style=color:#a40000>SUCCESSFUL&#34;</span>
+</span></span><span style=display:flex><span>      <span style=color:#204a87;font-weight:700>&#34;state&#34;</span><span style=color:#000;font-weight:700>:</span> <span style=color:#4e9a06>&#34;SUCCESSFUL&#34;</span>
 </span></span><span style=display:flex><span>    <span style=color:#000;font-weight:700>}</span>
 </span></span><span style=display:flex><span>  <span style=color:#000;font-weight:700>]</span>
 </span></span><span style=display:flex><span><span style=color:#000;font-weight:700>}</span>
